[gd_scene load_steps=2 format=2]

[ext_resource path="res://debug_overlay.gd" type="Script" id=1]

[node name="popup_panel" type="PopupPanel"]
margin_left = 20.0
margin_top = 20.0
margin_right = 270.0
margin_bottom = 270.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 246.0
margin_bottom = 246.0
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_slider_label" type="Label" parent="VBoxContainer"]
margin_top = 21.0
margin_right = 242.0
margin_bottom = 35.0
text = "Time Slider"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_slider" type="HSlider" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 242.0
margin_bottom = 66.0
min_value = -1.0
max_value = 24.0

[node name="freeze_time_checkbox" type="CheckBox" parent="VBoxContainer"]
margin_top = 81.0
margin_right = 242.0
margin_bottom = 105.0
text = "Freeze time"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_label" type="Label" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 242.0
margin_bottom = 134.0
text = "Time:"

[node name="date_label" type="Label" parent="VBoxContainer"]
margin_top = 149.0
margin_right = 242.0
margin_bottom = 163.0
text = "Date:"

[node name="period_label" type="Label" parent="VBoxContainer"]
margin_top = 178.0
margin_right = 242.0
margin_bottom = 192.0
text = "Period:"

[node name="fps_label" type="Label" parent="VBoxContainer"]
margin_top = 207.0
margin_right = 242.0
margin_bottom = 221.0
text = "FPS:"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="VBoxContainer/time_slider" to="." method="_on_time_slider_gui_input"]
[connection signal="value_changed" from="VBoxContainer/time_slider" to="." method="_on_time_slider_value_changed"]
[connection signal="toggled" from="VBoxContainer/freeze_time_checkbox" to="." method="_on_freeze_time_checkbox_toggled"]
